--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -1,4 +1,5 @@
-
+@import "components/colors";
+@import "components/vals";
 @import "components/buttons";
 @import "components/general";
 @import "components/nav";
