--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -1,3 +1,4 @@
 //Created by itdwyy on 12/2/2016.
 head
-    link(rel='stylesheet', href='/stylesheets/intranet.css')
+    link(rel='stylesheet', href='stylesheets/intranet.css')
+    script(src='javascript/intranet.js')
