--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -1,5 +1,9 @@
 @import "components/colors";
+@import "components/mixins";
 @import "components/vals";
+@import "components/normal";
+@import "components/icons";
 @import "components/buttons";
 @import "components/general";
 @import "components/nav";
+@import "components/forms";
