--- a/views/include/header.jade
+++ b/views/include/header.jade
@@ -1,5 +1,7 @@
 //Created by itdwyy on 12/2/2016.
 head
     title #{title}
-    //link(rel='stylesheet', href='stylesheets/intranet.css')
-    //script(src='javascript/intranet.js')
+    <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
+    link(rel='stylesheet', href='stylesheets/intranet.css')
+    link(rel='stylesheet', href='iconfont/material-icons.css')
+
