--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -1600,17 +1600,347 @@
 .transparent-text {
   color: transparent !important; }
 
-.nav {
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
+
+body {
   margin: 0; }
-  .nav a {
-    text-decoration: none; }
-  .nav ul {
-    margin: 0;
-    padding: 0; }
-  .nav .nav-v-list .list-item {
-    display: block; }
-  .nav .nav-h-list .list-item {
+
+article,
+aside,
+footer,
+header,
+nav,
+section {
+  display: block; }
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+figcaption,
+figure,
+main {
+  display: block; }
+
+figure {
+  margin: 1em 40px; }
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible; }
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects; }
+
+a:active,
+a:hover {
+  outline-width: 0; }
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted; }
+
+b,
+strong {
+  font-weight: inherit; }
+
+b,
+strong {
+  font-weight: bolder; }
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background-color: #ff0;
+  color: #000; }
+
+small {
+  font-size: 80%; }
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sub {
+  bottom: -0.25em; }
+
+sup {
+  top: -0.5em; }
+
+audio,
+video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+img {
+  border-style: none; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0; }
+
+button,
+input {
+  overflow: visible; }
+
+button,
+select {
+  text-transform: none; }
+
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; }
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal; }
+
+progress {
+  display: inline-block;
+  vertical-align: baseline; }
+
+textarea {
+  overflow: auto; }
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0; }
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px; }
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit; }
+
+details,
+menu {
+  display: block; }
+
+summary {
+  display: list-item; }
+
+canvas {
+  display: inline-block; }
+
+template {
+  display: none; }
+
+[hidden] {
+  display: none; }
+
+.cp-logo {
+  background: transparent url("/img/cplogo.svg") no-repeat scroll 0 0/100%; }
+
+.icon-group-h {
+  position: relative;
+  display: inline-block; }
+
+.search-icon {
+  position: absolute;
+  top: 18px;
+  left: 5px;
+  color: #757575; }
+
+.blue-icon {
+  color: #1E88E5; }
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit; }
+
+.wrapper-960 {
+  position: relative;
+  margin: 0 auto;
+  width: 960px; }
+  .wrapper-960::after {
+    display: block;
+    content: "";
+    clear: both; }
+
+.left {
+  float: left; }
+
+.right {
+  float: right; }
+
+.center {
+  margin: 0 auto; }
+
+.z-depth-0 {
+  box-shadow: none !important; }
+
+.z-depth-1 {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2); }
+
+.z-depth-1-half {
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2); }
+
+.z-depth-2 {
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); }
+
+.z-depth-3 {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3); }
+
+.z-depth-4 {
+  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3); }
+
+.z-depth-5 {
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3); }
+
+.hoverable {
+  transition: box-shadow .25s;
+  box-shadow: 0; }
+
+.hoverable:hover {
+  transition: box-shadow .25s;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+
+.nav {
+  position: relative;
+  display: block;
+  clear: both;
+  height: 56px;
+  overflow: hidden; }
+  .nav::after {
+    display: block;
+    content: "";
+    clear: both; }
+
+.nav-logo {
+  position: relative;
+  left: 0;
+  display: inline-block;
+  width: 137.16px;
+  height: 36px;
+  margin: 10px 0; }
+
+.nav-list-h, ul.nav-list-h {
+  position: relative;
+  margin: 0 10px;
+  padding: 0;
+  display: inline-block; }
+  .nav-list-h .nav-item, ul.nav-list-h .nav-item {
     display: block;
     float: left; }
+    .nav-list-h .nav-item, .nav-list-h .nav-item a, ul.nav-list-h .nav-item, ul.nav-list-h .nav-item a {
+      padding: 0 2.5px;
+      text-decoration: none;
+      color: #757575;
+      line-height: 56px;
+      white-space: nowrap;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: bold; }
+    .nav-list-h .nav-item.cur, .nav-list-h .nav-item.cur a, ul.nav-list-h .nav-item.cur, ul.nav-list-h .nav-item.cur a {
+      color: #424242; }
+  .nav-list-h .drp-list-v, ul.nav-list-h .drp-list-v {
+    display: none; }
+
+.nav-form {
+  position: relative;
+  display: inline-block;
+  margin: 0 0 0 200px;
+  padding: 0;
+  width: 200px;
+  height: 56px;
+  vertical-align: top; }
+  .nav-form input.search {
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin-top: -15px;
+    padding: 3px 8px 3px 40px;
+    font-size: 13px;
+    border: none;
+    line-height: 30px;
+    background-color: #f7f7f7; }
+    .nav-form input.search:focus {
+      outline: none;
+      background-color: #f7f7f7; }
+    .nav-form input.search:hover {
+      background-color: #ebebeb; }
+
+.icon-group-h {
+  display: inline-block;
+  vertical-align: top; }
+  .icon-group-h .materl-icons, .icon-group-h i {
+    line-height: 56px; }
 
 /*# sourceMappingURL=intranet.css.map */
