--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -11,7 +11,7 @@
             li.nav-item
                 a(href='#') Telephone
             li.nav-item
-                a(href='#') Department
+                a(href='#').has-dropdown Department
                     ul.drp-list-v
                         each item in departments
                             li.drp-list-item
@@ -24,6 +24,7 @@
         form.nav-form
             input.search.scaler
             i.material-icons.search-icon &#xE8B6;
-        .icon-group-h.right
+        a(href='#').icon-group-h.right
             i.material-icons.blue-icon &#xE0BE;
 
+script(src='/javascript/jquery-1.12.4.min.js')
