--- a/views/index.jade
+++ b/views/index.jade
@@ -5,3 +5,6 @@ html(lang="en")
     body
         include include/nav
         include include/imgslider
+script(src='/javascript/jquery-1.12.4.min.js')
+script(src='/javascript/intranet.js')
+script(src='/javascript/pages/index.js')
