--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -32,3 +32,6 @@ $blue-icon-bg-color: color('blue','darken-1');
 //drop-down-list
 $drop-down-list-bg-color: #fff;
 $drop-down-list-border: 1px solid color('grey','lighten-2');
+
+//input
+$nav-searchList-top: $nav-height;
