--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -6,4 +6,5 @@
 @import "components/buttons";
 @import "components/general";
 @import "components/nav";
+@import "components/inputs";
 @import "components/forms";
