--- a/public/stylesheets/components/_general.scss
+++ b/public/stylesheets/components/_general.scss
@@ -8,7 +8,9 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
-
+body {
+  overflow: hidden;
+}
 .wrapper-960 {
   position: relative;
   margin: 0 auto;
