--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -30,10 +30,7 @@
 
         form.nav-form
             input#telSearch.search
-            .autoSearchList.nav-searchList
-                a(href='#').resultItem ian 8396 6691
-                a(href='#').resultItem c
-                a(href='#').resultItem d
+            #telResult.autoSearchList.nav-searchList.z-depth-2
             i.material-icons.search-icon &#xE8B6;
         a(href='#').icon-group-h.right
             i.material-icons.blue-icon &#xE0BE;
