--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -36,5 +36,5 @@ $drop-down-list-border: 1px solid color('grey','lighten-2');
 //input
 $nav-searchList-top: $nav-height;
 //auto complete
-$autocompletItem-padding: 0 5px;
+$autocompletItem-padding: 5px 5px;
 $autocompletInside-padding: 0 5px;
