--- a/public/stylesheets/components/mixins/_helper.scss
+++ b/public/stylesheets/components/mixins/_helper.scss
@@ -1,7 +1,11 @@
 @mixin clearfix() {
-  &::after {
-    display: block;
+  &:before,
+  &:after {
     content: "";
+    display: table;
+  }
+  &:after {
     clear: both;
   }
+  *zoom: 1;
 }
