--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -7,10 +7,10 @@
             -
                 var departments = ['General Affairs(GAD)','Commercial(COM)','Finance(FIN)','Flight Operations(FLT)'];
                 var services = ['IT Request Form','E-Service','Crew Zone'];
-            li.nav-item.cur
-                a(href='#') Home
             li.nav-item
-                a(href='#') Telephone
+                a(href='/') Home
+            li.nav-item
+                a(href='/tele') Telephone
             li.nav-item.has-dropdown
                 a(href='#') Department
                     ul.drp-list-v.z-depth-1
