--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -1797,6 +1797,162 @@ template {
 [hidden] {
   display: none; }
 
+.col-1 {
+  position: relative;
+  display: block;
+  width: 80px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-1:before, .col-1:after {
+    content: "";
+    display: table; }
+  .col-1:after {
+    clear: both; }
+
+.col-2 {
+  position: relative;
+  display: block;
+  width: 160px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-2:before, .col-2:after {
+    content: "";
+    display: table; }
+  .col-2:after {
+    clear: both; }
+
+.col-3 {
+  position: relative;
+  display: block;
+  width: 240px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-3:before, .col-3:after {
+    content: "";
+    display: table; }
+  .col-3:after {
+    clear: both; }
+
+.col-4 {
+  position: relative;
+  display: block;
+  width: 320px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-4:before, .col-4:after {
+    content: "";
+    display: table; }
+  .col-4:after {
+    clear: both; }
+
+.col-5 {
+  position: relative;
+  display: block;
+  width: 400px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-5:before, .col-5:after {
+    content: "";
+    display: table; }
+  .col-5:after {
+    clear: both; }
+
+.col-6 {
+  position: relative;
+  display: block;
+  width: 480px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-6:before, .col-6:after {
+    content: "";
+    display: table; }
+  .col-6:after {
+    clear: both; }
+
+.col-7 {
+  position: relative;
+  display: block;
+  width: 560px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-7:before, .col-7:after {
+    content: "";
+    display: table; }
+  .col-7:after {
+    clear: both; }
+
+.col-8 {
+  position: relative;
+  display: block;
+  width: 640px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-8:before, .col-8:after {
+    content: "";
+    display: table; }
+  .col-8:after {
+    clear: both; }
+
+.col-9 {
+  position: relative;
+  display: block;
+  width: 720px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-9:before, .col-9:after {
+    content: "";
+    display: table; }
+  .col-9:after {
+    clear: both; }
+
+.col-10 {
+  position: relative;
+  display: block;
+  width: 800px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-10:before, .col-10:after {
+    content: "";
+    display: table; }
+  .col-10:after {
+    clear: both; }
+
+.col-11 {
+  position: relative;
+  display: block;
+  width: 880px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-11:before, .col-11:after {
+    content: "";
+    display: table; }
+  .col-11:after {
+    clear: both; }
+
+.col-12 {
+  position: relative;
+  display: block;
+  width: 960px;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .col-12:before, .col-12:after {
+    content: "";
+    display: table; }
+  .col-12:after {
+    clear: both; }
+
 .cp-logo {
   background: transparent url("/img/cplogo.svg") no-repeat scroll 0 0/100%; }
 
@@ -1806,7 +1962,7 @@ template {
 
 .search-icon {
   position: absolute;
-  top: 18px;
+  top: 20px;
   left: 5px;
   color: #757575; }
 
@@ -1846,6 +2002,21 @@ body {
 .center {
   margin: 0 auto; }
 
+.clear {
+  clear: both; }
+
+.clearfix {
+  *zoom: 1;
+  min-height: 1px; }
+  .clearfix:before, .clearfix:after {
+    content: "";
+    display: table; }
+  .clearfix:after {
+    clear: both; }
+
+.none-padding {
+  padding: 0; }
+
 .z-depth-0 {
   box-shadow: none !important; }
 
@@ -1879,8 +2050,8 @@ body {
   position: relative;
   display: block;
   clear: both;
-  height: 56px;
-  border-bottom: 1px solid #e0e0e0;
+  height: 60px;
+  border-bottom: none;
   *zoom: 1; }
   .nav:before, .nav:after {
     content: "";
@@ -1894,13 +2065,22 @@ body {
   display: inline-block;
   width: 137px;
   height: 36px;
-  margin: 10px 0; }
+  margin: 12px 0; }
 
 .nav-list-h {
   position: relative;
   margin: 0 10px;
   padding: 0;
-  display: inline-block; }
+  display: block; }
+  .nav-list-h.second-nav {
+    position: relative;
+    top: 0;
+    margin: 0;
+    height: 37px;
+    background-color: #292059; }
+    .nav-list-h.second-nav .nav-item a {
+      color: #fafafa;
+      line-height: 37px; }
   .nav-list-h .nav-item {
     display: block;
     float: left; }
@@ -1909,7 +2089,7 @@ body {
       text-decoration: none;
       padding: 0 5px;
       color: #757575;
-      line-height: 56px;
+      line-height: 60px;
       white-space: nowrap;
       cursor: pointer;
       font-size: 14px;
@@ -1926,14 +2106,16 @@ body {
     background-color: #fff;
     border: 1px solid #e0e0e0;
     list-style: none; }
+    .nav-list-h .drp-list-v .drp-list-item, .nav-list-h .drp-list-v .drp-list-item li, .nav-list-h .drp-list-v .drp-list-item a {
+      color: #292059; }
 
 .nav-form {
   position: relative;
   display: inline-block;
-  margin: 0 0 0 150px;
+  margin: 0 50px 0 0;
   padding: 0;
   width: 200px;
-  height: 56px;
+  height: 60px;
   vertical-align: top; }
   .nav-form input.search {
     position: absolute;
@@ -1945,19 +2127,20 @@ body {
     padding: 3px 8px 3px 40px;
     font-size: 13px;
     border: none;
+    border-radius: 15px;
     line-height: 30px;
-    background-color: #f7f7f7; }
+    background-color: #eeeeee; }
     .nav-form input.search:focus {
       outline: none;
-      background-color: #f7f7f7; }
+      background-color: #eeeeee; }
     .nav-form input.search:hover {
-      background-color: #ebebeb; }
+      background-color: #e0e0e0; }
 
 .icon-group-h {
   display: inline-block;
   vertical-align: top; }
   .icon-group-h .materl-icons, .icon-group-h i {
-    line-height: 56px; }
+    line-height: 60px; }
 
 .autoSearchList {
   position: absolute;
@@ -1965,7 +2148,7 @@ body {
   width: 100%;
   background-color: inherit; }
   .autoSearchList.nav-searchList {
-    top: 56px; }
+    top: 60px; }
   .autoSearchList.pull-left {
     right: 0; }
   .autoSearchList .resultItem {
@@ -1996,5 +2179,66 @@ body {
       color: #fff;
       background-color: #0D47A1;
       cursor: pointer; }
+
+.slide-container {
+  display: block;
+  position: relative;
+  display: block;
+  float: left;
+  min-height: 1px;
+  *zoom: 1; }
+  .slide-container:before, .slide-container:after {
+    content: "";
+    display: table; }
+  .slide-container:after {
+    clear: both; }
+  .slide-container .slide-images {
+    position: absolute;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    *zoom: 1; }
+    .slide-container .slide-images:before, .slide-container .slide-images:after {
+      content: "";
+      display: table; }
+    .slide-container .slide-images:after {
+      clear: both; }
+    .slide-container .slide-images .img {
+      display: block;
+      height: 100%; }
+
+.news-area {
+  margin-top: 22px; }
+
+.slide-container {
+  position: relative;
+  display: block;
+  float: left;
+  min-height: 1px;
+  *zoom: 1;
+  width: 550px;
+  height: 385px; }
+  .slide-container:before, .slide-container:after {
+    content: "";
+    display: table; }
+  .slide-container:after {
+    clear: both; }
+
+.right-new-panel {
+  position: relative;
+  display: block;
+  float: left;
+  min-height: 1px;
+  *zoom: 1;
+  width: 409.99px;
+  height: 385px; }
+  .right-new-panel:before, .right-new-panel:after {
+    content: "";
+    display: table; }
+  .right-new-panel:after {
+    clear: both; }
 
 /*# sourceMappingURL=intranet.css.map */
