--- a/public/stylesheets/components/mixins/_helper.scss
+++ b/public/stylesheets/components/mixins/_helper.scss
@@ -9,3 +9,21 @@
   }
   *zoom: 1;
 }
+@mixin float-block {
+  position: relative;
+  display: block;
+  float: left;
+  min-height: 1px;
+  @include clearfix;
+}
+
+@mixin relativeblock{
+  position: relative;
+  display: block;
+}
+
+@mixin clear {
+  clear: both;
+  @include clearfix;
+}
+
