--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2014,6 +2014,9 @@ body {
   .clearfix:after {
     clear: both; }
 
+.center-text {
+  text-align: center; }
+
 .none-padding {
   padding: 0; }
 
@@ -2180,6 +2183,58 @@ body {
       background-color: #0D47A1;
       cursor: pointer; }
 
+.card-h {
+  position: relative;
+  display: block;
+  text-decoration: none;
+  clear: both;
+  *zoom: 1; }
+  .card-h:before, .card-h:after {
+    content: "";
+    display: table; }
+  .card-h:after {
+    clear: both; }
+  .card-h .txt {
+    position: relative;
+    display: block;
+    float: left;
+    min-height: 1px;
+    *zoom: 1;
+    float: right; }
+    .card-h .txt:before, .card-h .txt:after {
+      content: "";
+      display: table; }
+    .card-h .txt:after {
+      clear: both; }
+    .card-h .txt .title {
+      clear: both;
+      *zoom: 1; }
+      .card-h .txt .title:before, .card-h .txt .title:after {
+        content: "";
+        display: table; }
+      .card-h .txt .title:after {
+        clear: both; }
+    .card-h .txt .sub {
+      clear: both;
+      *zoom: 1; }
+      .card-h .txt .sub:before, .card-h .txt .sub:after {
+        content: "";
+        display: table; }
+      .card-h .txt .sub:after {
+        clear: both; }
+  .card-h .img {
+    position: relative;
+    display: block;
+    float: left;
+    min-height: 1px;
+    *zoom: 1;
+    float: left; }
+    .card-h .img:before, .card-h .img:after {
+      content: "";
+      display: table; }
+    .card-h .img:after {
+      clear: both; }
+
 .slide-container {
   display: block;
   position: relative;
@@ -2240,5 +2295,57 @@ body {
     display: table; }
   .right-new-panel:after {
     clear: both; }
+
+.right-new-panel {
+  position: relative;
+  display: block;
+  padding: 0 0 0 30px; }
+  .right-new-panel .slide-tab-bar {
+    position: relative;
+    display: block;
+    float: left;
+    min-height: 1px;
+    *zoom: 1;
+    height: 18px; }
+    .right-new-panel .slide-tab-bar:before, .right-new-panel .slide-tab-bar:after {
+      content: "";
+      display: table; }
+    .right-new-panel .slide-tab-bar:after {
+      clear: both; }
+    .right-new-panel .slide-tab-bar .slide-item {
+      padding: 0 20px;
+      position: relative;
+      display: block;
+      float: left;
+      min-height: 1px;
+      *zoom: 1;
+      *zoom: 1; }
+      .right-new-panel .slide-tab-bar .slide-item:before, .right-new-panel .slide-tab-bar .slide-item:after {
+        content: "";
+        display: table; }
+      .right-new-panel .slide-tab-bar .slide-item:after {
+        clear: both; }
+      .right-new-panel .slide-tab-bar .slide-item:before, .right-new-panel .slide-tab-bar .slide-item:after {
+        content: "";
+        display: table; }
+      .right-new-panel .slide-tab-bar .slide-item:after {
+        clear: both; }
+      .right-new-panel .slide-tab-bar .slide-item, .right-new-panel .slide-tab-bar .slide-item span {
+        line-height: 18px; }
+  .right-new-panel .card-h .txt {
+    width: 230px;
+    height: 122px; }
+    .right-new-panel .card-h .txt .title {
+      font-size: 14px;
+      line-height: 18px; }
+    .right-new-panel .card-h .txt .sub {
+      font-size: 12px; }
+  .right-new-panel .card-h .img {
+    width: 149.99px;
+    height: 98px; }
+    .right-new-panel .card-h .img img {
+      display: block;
+      width: 100%;
+      height: 100%; }
 
 /*# sourceMappingURL=intranet.css.map */
