--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -9,6 +9,8 @@
 @import "components/nav";
 @import "components/inputs";
 @import "components/forms";
+@import "components/card";
+@import "components/slidebar";
 
 //items
 @import "components/slideimgs";
