--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ html(lang="en")
     include include/header
 body
     include include/nav
-    include include/imgslider
+    include include/newarea
 script(src='/javascript/jquery-1.12.4.min.js')
 script(src='/javascript/intranet.js')
 script(src='/javascript/pages/index.js')
