auto search ajax

--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -1,14 +1,15 @@
+//
+   Created by itdwyy on 12/3/2016.
+.wrapper-960.news-area
+    .slide-container
+        .slide-images
+            a.img(style='background-image: url(http://n.sinaimg.cn/games/transform/20160506/__70-fxryhhi8460538.png)')
+
     .right-new-panel
         .slide-tab-bar.clear
             .slide-item
                 span Latest
-            .sli//
-               Created by itdwyy on 12/3/2016.
-            .wrapper-960.news-area
-                .slide-container
-                    .slide-images
-                        a.img(style='background-image: url(http://n.sinaimg.cn/games/transform/20160506/__70-fxryhhi8460538.png)')
-            de-item
+            .slide-item
                 span Top
         .news-list.clearfix.clear
             a.card-h
